--- a/mammutsparkelasticsearch/pom.xml
+++ b/mammutsparkelasticsearch/pom.xml
@@ -4,15 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.netease.mammut.spark.training</groupId>
-    <artifactId>mammut-spark-training</artifactId>
+    <groupId>com.netease.mammut.spark.test</groupId>
+    <artifactId>mammut-spark-elasticsearch</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>mammutsparkelasticsearch</module>
-        <module>mammutspark1elasticsearch</module>
-    </modules>
-
     <properties>
         <spark.version>2.1.2</spark.version>
     </properties>
@@ -31,13 +25,26 @@
             <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.elasticsearch/elasticsearch-spark-20_2.11 -->
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch-spark-20_2.11</artifactId>
+            <version>5.6.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-streaming_2.11</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
                 <!-- https://mvnrepository.com/artifact/net.alchim31.maven/scala-maven-plugin -->
-               <groupId>net.alchim31.maven</groupId>
+                <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
                 <version>3.2.2</version>
                 <executions>
@@ -51,4 +58,6 @@
             </plugin>
         </plugins>
     </build>
+
+
 </project>
