--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,7 @@
     <groupId>com.netease.mammut.spark.training</groupId>
     <artifactId>mammut-spark-training</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>mammutsparkelasticsearch</module>
-        <module>mammutspark1elasticsearch</module>
-    </modules>
+    <packaging>jar</packaging>
 
     <properties>
         <spark.version>2.1.2</spark.version>
